Fixed image distortion

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -200,7 +200,7 @@
     margin: 4.5rem auto;
   }
 
-  .btn{
+  .btn {
     margin: auto;
   }
 }
@@ -447,6 +447,9 @@
 
       .box-1 {
         gap: 0.3rem;
+        img {
+          height: 250px;
+        }
       }
 
       .box-1,
@@ -493,11 +496,14 @@
 
       .box-1 {
         gap: 0.3rem;
+
+        img {
+          height: 200px;
+        }
       }
 
       .box-1,
       .box-2 {
-
         height: 200px !important;
       }
     }
